@@ -756,6 +756,7 @@
     <ClInclude Include="source\mscl\MicroStrain\Inertial\Packets\InertialFieldParser_GNSS.h" />
     <ClInclude Include="source\mscl\MicroStrain\Inertial\Packets\InertialFieldParser_Sensor.h" />
     <ClInclude Include="source\mscl\MicroStrain\Inertial\Packets\InertialFieldParser_Shared.h" />
+    <ClInclude Include="source\mscl\MicroStrain\Inertial\Packets\InertialFieldParser_System.h" />
     <ClInclude Include="source\mscl\MicroStrain\Inertial\PositionOffset.h" />
     <ClInclude Include="source\mscl\MicroStrain\LinearEquation.h" />
     <ClInclude Include="source\mscl\MicroStrain\MIP\Commands\CyclePower.h" />
@@ -1085,6 +1086,7 @@
     <ClCompile Include="source\mscl\MicroStrain\Inertial\Packets\InertialFieldParser_GNSS.cpp" />
     <ClCompile Include="source\mscl\MicroStrain\Inertial\Packets\InertialFieldParser_Sensor.cpp" />
     <ClCompile Include="source\mscl\MicroStrain\Inertial\Packets\InertialFieldParser_Shared.cpp" />
+    <ClCompile Include="source\mscl\MicroStrain\Inertial\Packets\InertialFieldParser_System.cpp" />
     <ClCompile Include="source\mscl\MicroStrain\Inertial\PositionOffset.cpp" />
     <ClCompile Include="source\mscl\MicroStrain\LinearEquation.cpp" />
     <ClCompile Include="source\mscl\MicroStrain\MIP\Commands\CyclePower.cpp" />
