@@ -1,0 +1,14 @@
+/*****************************************************************************************
+**          Copyright(c) 2015-2022 Parker Hannifin Corp. All rights reserved.           **
+**                                                                                      **
+**    MIT Licensed. See the included LICENSE.txt for a copy of the full MIT License.    **
+*****************************************************************************************/
+
+#pragma once
+
+#include "mscl/MicroStrain/MIP/Packets/MipFieldParser.h"
+
+namespace mscl
+{
+    //Title: InertialFieldParser_System
+}
