@@ -124,7 +124,8 @@ public class MipTypes : global::System.IDisposable {
     CLASS_GNSS3 = 0x93,
     CLASS_RTK = 0x93,
     CLASS_GNSS4 = 0x94,
-    CLASS_GNSS5 = 0x95
+    CLASS_GNSS5 = 0x95,
+    CLASS_SYSTEM = 0xA0
   }
 
   public enum FunctionSelector {
@@ -535,7 +536,11 @@ public class MipTypes : global::System.IDisposable {
     CH_FIELD_GNSS_5_SHARED_TICKS = 0x95D1,
     CH_FIELD_GNSS_5_SHARED_DELTA_TICKS = 0x95D2,
     CH_FIELD_GNSS_5_SHARED_GPS_TIMESTAMP = 0x95D3,
-    CH_FIELD_GNSS_5_SHARED_DELTA_TIMESTAMP = 0x95D4
+    CH_FIELD_GNSS_5_SHARED_DELTA_TIMESTAMP = 0x95D4,
+    CH_FIELD_SYSTEM_SHARED_TICKS = 0xA0D1,
+    CH_FIELD_SYSTEM_SHARED_DELTA_TICKS = 0xA0D2,
+    CH_FIELD_SYSTEM_SHARED_GPS_TIMESTAMP = 0xA0D3,
+    CH_FIELD_SYSTEM_SHARED_DELTA_TIMESTAMP = 0xA0D4
   }
 
   public static readonly byte MIN_SHARED_FIELD_DESCRIPTOR = msclPINVOKE.MipTypes_MIN_SHARED_FIELD_DESCRIPTOR_get();
