@@ -25,6 +25,8 @@ Forthcoming
     - Get Calibrated Sensor Ranges (0x0C,0x53)
 - Added support for MIP data:
     - Event Source (0xFF,0xD0)
+- Added support for data field:
+	- System Data (0xA0)
 - Added MipSharedDataFields (MipDataPacket::shared()) to more easily access shared fields within a packet
 - Added check for supported event trigger threshold qualifiers
 - Updated supported CV7 aiding measurement filters
